Nova versão e novos recursos

--- a/HTDOCS/launcher/settings.conf
+++ b/HTDOCS/launcher/settings.conf
@@ -5,7 +5,7 @@
 ;---------------------------------------
 ;PublicVersion do aplicativo, altere nas propriedades ou no arquivo AssemblyInfo.cs em AssemblyVersion
 ;--------------------------------------
-launcherversion=1.0.0.0
+launcherversion=2022.0.0.0
 
 ;---------------------------------------
 ;1= Manutenção
@@ -32,3 +32,10 @@ clientversion=1
 keyhost=false
 key=0
 use_xingload=false
+
+[CONFIG]
+GameVersionn=1.15.42 (v42)
+FilesCountCompare=5
+
+[LAUNCHER_BAN]
+BanPerm=http://localhost/launcher/ban/BANNED.ban
